cmake_minimum_required(VERSION 3.0)

#ADD_SUBDIRECTORY(exe1)
#ADD_SUBDIRECTORY(exe2)
#ADD_SUBDIRECTORY(exe3)
#ADD_SUBDIRECTORY(exe4)
#ADD_SUBDIRECTORY(exe5)
#ADD_SUBDIRECTORY(exe6)
#ADD_SUBDIRECTORY(exe7)
#ADD_SUBDIRECTORY(exe9)
#ADD_SUBDIRECTORY(exe11)
#ADD_SUBDIRECTORY(exe12)
#ADD_SUBDIRECTORY(exe13)
#ADD_SUBDIRECTORY(exe14)
#ADD_SUBDIRECTORY(exe15)
#ADD_SUBDIRECTORY(exe16)
#ADD_SUBDIRECTORY(exe17)
#ADD_SUBDIRECTORY(exe18)
#ADD_SUBDIRECTORY(exe19)
#ADD_SUBDIRECTORY(exe20)
#ADD_SUBDIRECTORY(exe21)
#ADD_SUBDIRECTORY(exe22)
#ADD_SUBDIRECTORY(exe23)
#ADD_SUBDIRECTORY(exe24)
#ADD_SUBDIRECTORY(exe25)
#ADD_SUBDIRECTORY(exe26)
#ADD_SUBDIRECTORY(exe27)
ADD_SUBDIRECTORY(exe28)
#ADD_SUBDIRECTORY(exe29)
#ADD_SUBDIRECTORY(exe30)
#ADD_SUBDIRECTORY(exe31)







